# pystac-client

./: .adr-dir  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  RELEASING.md  doc8.ini  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements-min.txt  requirements_docs.txt  setup.cfg  setup.py  tasks.py  tox.ini  vulture_allow.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: continuous-integration.yml  release.yml
docs/: api.rst  concepts.rst  conf.py  contributing.rst  design_decisions.rst  environment.yml  index.rst  quickstart.ipynb  quickstart.md  quickstart.rst  tutorial.ipynb  tutorials.rst  usage.rst
docs/design/: design_decisions.rst
docs/source/: api.rst  client.rst  conf.py  design_decisions.rst  index.rst
docs/source/design/: 0001-record-architecture-decisions.md  0002-choose-stac-library.md
docs/source/usage/: ogc_features.rst  stac.rst  stac_api.rst  stac_api_core.rst  stac_api_extensions.rst  stac_api_item_search.rst  stac_core.rst  stac_index.rst  stac_item_search.rst
docs/tutorials/: aoi-coverage.ipynb  authentication.ipynb  authentication.md  cql-filter.ipynb  cql2-filter.ipynb  item-search-intersects.ipynb  pystac-client-download-assets.ipynb  pystac-client-introduction.ipynb  stac-metadata-viz.ipynb
pystac_api/: __init__.py  api.py  cli.py  conformance.py  exceptions.py  item_collection.py  item_search.py  paging.py  stac_api_object.py  stac_io.py
pystac_api/extensions/: __init__.py  context.py
pystac_client/: __init__.py  _utils.py  api.py  cli.py  client.py  collection_client.py  collection_search.py  conformance.py  errors.py  exceptions.py  free_text.py  item_client.py  item_collection.py  item_search.py  mixins.py  options.py  search.py  stac_api_io.py  stac_api_object.py  stac_io.py  version.py  warnings.py
pystac_client/extensions/: base.py  context.py
scripts/: build-docs  check-minimum-requirements  cibuild  format  install-min-requirements  lint  test
tests/: helpers.py  test_api.py  test_base_search.py  test_cli.py  test_client.py  test_collection_client.py  test_collection_search.py  test_conformance.py  test_free_text.py  test_item_search.py  test_options.py  test_paging.py  test_pystac_api.py  test_stac_api_io.py  test_stac_api_object.py  test_stac_io.py  test_warnings.py
tests/cassettes/test_api/: TestAPI.test_conformance_fallback.yaml  TestAPI.test_from_api.yaml  TestAPI.test_from_file.yaml  TestAPI.test_links.yaml
tests/cassettes/test_cli/: TestCLI.test_item_search[inprocess].yaml  TestCLI.test_matched[inprocess].yaml  TestCLI.test_matched_not_available[inprocess].yaml  TestCLI.test_non_conformant_can_be_fixed[inprocess].yaml  TestCLI.test_non_conformant_raises_by_default[inprocess].yaml  TestCLICollections.test_collection_search[inprocess].yaml  TestCLICollections.test_collections[inprocess].yaml  TestCLICollections.test_save[inprocess].yaml  TestCLISearch.test_altering_conforms_to[inprocess---clear-conforms-to].yaml  TestCLISearch.test_altering_conforms_to[inprocess---remove-conforms-to=ITEM_SEARCH].yaml  TestCLISearch.test_fields[inprocess].yaml  TestCLISearch.test_filter[inprocess].yaml  TestCLISearch.test_intersects[inprocess-netherlands_aoi.json].yaml  TestCLISearch.test_intersects[inprocess-sample-item.json].yaml  TestCLISearch.test_intersects_despite_warning[inprocess].yaml  TestCLISearch.test_item_search[inprocess].yaml  TestCLISearch.test_matched[inprocess].yaml  TestCLISearch.test_matched_not_available[inprocess].yaml  TestCLISearch.test_non_conformant_can_be_fixed[inprocess].yaml  TestCLISearch.test_non_conformant_can_be_ignored[inprocess---ignore=no-conforms-to].yaml  TestCLISearch.test_non_conformant_can_be_ignored[inprocess---ignore].yaml  TestCLISearch.test_non_conformant_raises_by_default[inprocess].yaml  TestCLISearch.test_non_conformant_raises_if_warning_set_to_error[inprocess---error=no-conforms-to].yaml  TestCLISearch.test_non_conformant_raises_if_warning_set_to_error[inprocess---error].yaml  TestCLISearch.test_save[inprocess].yaml
tests/cassettes/test_client/: TestAPI.test_collections_fallback.yaml  TestAPI.test_environment_variable.yaml  TestAPI.test_from_file.yaml  TestAPI.test_instance.yaml  TestAPI.test_links.yaml  TestAPI.test_v1.yaml  TestAPICollectionSearch.test_search.yaml  TestAPICollectionSearch.test_search_conformance_warning.yaml  TestAPISearch.test_search_max_items_unlimited_default.yaml  TestConformsTo.test_changing_conforms_to_changes_behavior.yaml  TestQueryables.test_get_queryables.yaml  TestQueryables.test_get_queryables_collections.yaml  TestSigning.test_sign_with_return_warns.yaml  TestSigning.test_signing.yaml  test_collections_are_clients.yaml  test_fallback_strategy.yaml  test_get_collection_returns_none_if_not_found.yaml  test_get_items_non_recursion.yaml  test_get_items_recursion_collections_required_without_ids.yaml  test_get_items_recursion_no_collections_without_ids.yaml  test_get_items_without_ids.yaml  test_non_recursion_on_fallback.yaml  test_query_string_in_collections_url.yaml  test_recursion_on_fallback.yaml  test_set_queryables.yaml
tests/cassettes/test_collection_client/: TestCollectionClient.test_get_item.yaml  TestCollectionClient.test_get_item_with_item_search.yaml  TestCollectionClient.test_get_items.yaml  TestCollectionClient.test_get_items_with_ids.yaml  TestCollectionClient.test_get_queryables.yaml  TestCollectionClient.test_instance.yaml
tests/cassettes/test_collection_search/: TestCollectionSearch.test_bbox_results.yaml  TestCollectionSearch.test_client_side_bbox.yaml  TestCollectionSearch.test_client_side_datetime.yaml  TestCollectionSearch.test_client_side_q.yaml  (+6 more)
tests/data/: astraea_api.json  fedeo_clearinghouse.json  invalid-collection.json  netherlands_aoi.json  planetary-computer-aster-l1t-collection.json  planetary-computer-collection.json  planetary-computer-root.json  sample-item-collection.json  sample-item.json
tests/test_extensions/: test_context_extension.py  test_extensions_base.py
(+39 files in other folders)
