[metadata]
license_file = LICENSE

[isort]
profile=black

[doc8]
ignore-path=docs/_build,docs/tutorials
max-line-length=88

[flake8]
max-line-length = 88
extend-ignore = E203, W503, E731, E722
per-file-ignores = __init__.py:F401,test_item_search.py:E501

[tool:pytest]
markers =
    vcr: records network activity
addopts =
    --benchmark-skip

[mypy]
show_error_codes = True
strict = True

[mypy-jinja2.*]
ignore_missing_imports = True

[mypy-jsonschema.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True
