[metadata]
license_file = LICENSE

[doc8]
ignore-path=docs/_build,docs/tutorials
max-line-length=130

[tool:pytest]
markers =
    vcr: records network activity
addopts =
    --benchmark-skip

[mypy]
show_error_codes = True
strict = True

[mypy-jinja2.*]
ignore_missing_imports = True

[mypy-jsonschema.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True
